# CMGE

./: .gitignore  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  SETUP_GUIDE.md  main.cpp  mock_mge_server.py  quick_setup.sh  test_client.py  tournament_manager.cpp  tournament_manager.hpp
static/: admin.html  index.html
